Build/Fix: Started over, to clean up code, make more readable and create a better flow through functions.  seems to be better so far.'

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,14 @@
-
-/* Setting border for pageContainer*/
-
-
-.timer {
+#timer {
     margin-left: 90%;
+    font-size: large;
+    font-weight: bold;   
 }
-
+.timer-text{
+    margin-left: 80%;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
 
 .quiz-header  {
     display: flex;
@@ -23,7 +26,7 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
-.start-btn {
+#start-button {
     font-size: 1.5rem;
     align-items: center;
     justify-content: center;
@@ -43,7 +46,7 @@ p {
 }
 
 
-input, .start-btn {
+ .start-btn {
     position: absolute
     font-size: 20px;
     font-weight: bold;
@@ -51,6 +54,14 @@ input, .start-btn {
     margin-left: 42%;
 }
 
+#quiz-screen {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+}
 .quiz-footer {
     display: flex;
     flex-direction: column;
@@ -84,5 +95,14 @@ section {
 
 header {
     align-items: center;
+}
+
+#end-screen {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
 }
 
